Reworking for FusionAuth and testing against Azure Active Directory